# website

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  Shuttle.toml  build.rs  config.toml  config.yml  elm.json  fly.toml  justfile  netlify.toml  package-lock.json
.github/workflows/: CI.yml  Shuttle.yml  deploy.yml
.original/content/: consultants.md
.original/scripts/: serve.sh
.original/templates/: 404.html  blog-page.html  index.html  project.html
content/: _footer.md  _index.en.md  _index.md
content/blog/: .2022-04-06_glen_background.md  2022-03-27_hola_plabayo.md  2022-03-30_software_craft.md  2022-05-30_software_craft.md  2022-06-01_parenting_tools_references.md  2022-06-01_parenting_tools_references.nl.md  _index.md  _index.nl.md  first.md  hello_plabayo.md  hola_plabayo.md  second.md
content/projects/: _index.md  plabayo_news.md
design/: copy_favicon_to_assets.sh  generate_favicons.sh
dream/: config.yml
dream/content/: about.en.md  footer.en.md
dream/i18n/: en.yml
dream/layouts/: blog.en.html  footer.en.html  header.en.html  main.en.html  projects.en.html
dream/pages/: index.en.html
i18n/: en.toml  en.yml  nl.toml  nl.yml
old/: justfile
old/src/: main.rs
old/templates/: base.html  index.html
plabayo-server/: Cargo.toml
plabayo-server/src/: main.rs
plabayo-website/: Cargo.toml
plabayo-website/src/: lib.rs
plabayo-website/static/: style.css
plabayo-worker/: Cargo.toml  package-lock.json  package.json  wrangler.toml
plabayo-worker/src/: lib.rs
public/: index.js  style.css
public/fonts/: Contra.eot  Contra_License.txt  Contra_README.txt  Lato-HairlineItalic.eot
scripts/: dev-worker.sh  publish-worker.sh
src/: Shared.elm  Site.elm  View.elm  main.rs
src/Page/: Index.elm  Projects.elm
src/Plabajo/: L18n.elm  (+2 more)
static/: layout.css  manifest.webmanifest  robots.txt  style.css  theme.css
templates/: 404.html  about.html  base.html  blog-page.html  blog.html  consultants.html  data.html  foss.html  index.html  port.html  project-page.html  project.html  rust.html  sitemap.xml
(+55 files in other folders)
