[package]
name = "plabayo"
version = "0.1.0"
edition = "2021"
description = "official website of plabayo"
homepage = "https://www.bckt.xyz/"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/plabayo/website"

[dependencies]
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.3"
axum = "0.6"
chrono = "0.4"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
shuttle-axum = "0.30.1"
shuttle-runtime = "0.30.1"
tokio = "1.28"
tower = { version = "0.4", features = ["tracing"] }
tower-http = { version = "0.4", features = ["fs", "trace", "compression-full", "normalize-path"] }
tracing = "0.1"
