[package]
name = "plabayo"
version = "0.1.0"
edition = "2021"
description = "official website of plabayo"
homepage = "https://www.bckt.xyz/"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/plabayo/website"

[dependencies]
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
axum = "0.7"
chrono = "0.4"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
shuttle-axum = "0.44.0"
shuttle-runtime = "0.44.0"
tokio = "1.28"
tower = { version = "0.4", features = ["tracing"] }
tower-http = { version = "0.5", features = ["fs", "trace", "compression-full", "normalize-path"] }
tracing = "0.1"
