[package]
name = "plabayo_www"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
askama = "0.12.1"
bytes = "1"
clap = { version = "4.5.13", features = ["derive"] }
paste = "1"
rama = { version = "=0.2.0-alpha.3", features = ["compression", "http-full"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[build-dependencies]
vergen-gitcl = { version = "1.0.0", features = ["build", "cargo"] }
